Fix color contrast on conference pages (#7118)

--- a/indico/web/client/styles/legacy/Conf_Basic.scss
+++ b/indico/web/client/styles/legacy/Conf_Basic.scss
@@ -5,6 +5,8 @@
 // modify it under the terms of the MIT License; see the
 // LICENSE file for more details.
 
+@use 'design_system';
+
 /*
         Default Styles and layout for Conf-pages
         Do not custom this CSS
@@ -288,7 +290,7 @@ li.over ul {
 /* ------Misc------ */
 
 .conferenceDetails .description {
-  color: #777;
+  color: var(--text-secondary-color);
   font-size: 1.2em;
   margin: 1em 0 2em 0;
 }
